# cowboy-django

./: .dockerignore  .gitignore  .releaserc.develop.json  .releaserc.main.json  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  k8s.yaml  manage.py  package-lock.json  package.json  pyproject.toml  semantic-release.config.cjs  semantic-release.config.cjs.disabled
.github/workflows/: docker-publish.yml  python-release.yml  release-act-test.yml  release.yml
asciiapp/: ascii_arts.json  cowboy.py  urls.py  views.py
asciiapp/templates/asciiapp/: index.html
cowboysite/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
docs/: cowboy-django-project.md  docker-build-publish-workflow.md  python-semantic-release-workflow.md  release-and-publish.md
