[project]
name = "django-cowboy-htmx-rotator"
version = "1.0.0"
description = "A Django + HTMX web app that serves ASCII art cowboys with Kubernetes-themed jokes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
build = ["uv ~= 0.7.12"]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
    "python-semantic-release>=9.0.0",
]

[tool.semantic_release]
version_variables = [
    "pyproject.toml:project.version",
]
build_command = """
    python -m pip install -e '.[build]'
    uv lock --upgrade-package django-cowboy-htmx-rotator
    git add uv.lock
"""
major_on_zero = false
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore", 
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor", "build", "chore", "ci", "docs", "style", "test"]
