[project]
name = "cowboy-django"
dynamic = ["version"]
description = "A Django + HTMX web app that serves ASCII art cowboys with Kubernetes-themed jokes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
build = ["uv ~= 0.7.12"]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
    "python-semantic-release>=9.0.0",
]

[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "cowboysite/_version.py"

[tool.semantic_release]
# Don't update version files to avoid extra commits
# version_toml = [
#     "pyproject.toml:project.version",
# ]
build_command = """
    python -m pip install -e '.[build]'
    uv lock --upgrade-package cowboy-django
"""
commit = false  # Don't create version bump commits
major_on_zero = false
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = true
prerelease_token = "a"

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore", 
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor", "build", "chore", "ci", "docs", "style", "test"]
